Project Bible {
  Note: 'The Holy Bible in various languages and translations'
}

Table Language {
  id integer [pk, increment]
  name varchar [not null, unique]
}

Table Translation {
  id integer [pk, increment]
  language_id integer [not null, unique]
  name varchar [not null, unique]
  full_name varchar [unique]
  year varchar[4]
  description text
}

enum Testament {
  OldTestament
  NewTestament
}

enum Division {
  Pentateuch
  HistoricalBook
  WisdomBook
  MajorProphet
  MinorProphet
  Gospel
  History
  PaulineEpistle
  GeneralEpistle
  Prophecy
}

Table Book {
  id integer [pk, increment]
  translation_id integer [not null, unique]
  name varchar [not null]
  long_name varchar [not null]
  regional_name varchar
  regional_long_name varchar
  book_number integer [not null]
  abbreviation varchar
  testament Testament
  division Division
  description text
}

Table Chapter {
  id integer [pk, increment]
  book_id integer [not null, unique]
  chapter_number integer [not null]
  description text
}

Table Verse {
  id integer [pk, increment]
  chapter_id integer [not null, unique]
  verse_number integer
  verse varchar [not null]
}

Ref: Language.id > Translation.language_id [delete: cascade, update: cascade]
Ref: Translation.id > Book.translation_id [delete: cascade, update: cascade]
Ref: Book.id > Chapter.book_id [delete: cascade, update: cascade]
Ref: Chapter.id > Verse.chapter_id [delete: cascade, update: cascade]

